Revision history for Image::Scale

0.09
        - Fixed JPEG version detection for libjpeg-turbo.
        - Fixed GIF library detection when using only --with-gif-includes switch.

0.08    2011-08-24
        - Forgot to add some new test files to the manifest.
        - Updated the Makefile and Win32 instructions to use libjpeg-turbo-1.1.1.

0.07    2011-08-24
        - Protect against resizing to a 0-width or 0-height image.
        - Use libungif if giflib is not found. (Max Soulé)
        - Fix build issue when building a non-x86 version using libjpeg-turbo's
          header file.
        - Hide orientation warning when EXIF orientation value is 0 (invalid but
          common for some reason).

0.06    2010-09-20 18:40:00
        - JPEG: Don't abort on fatal read errors if we have already processed
          some lines from the image. An image with blank space is better than
          no image at all.

0.05    2010-09-20 14:30:00
        - Faster resize when image doesn't have an alpha channel.
        - Faster JPEG compression when using libjpeg-turbo.

0.04    2010-09-17 15:40:00
        - More fixes for CPAN testers.

0.03    2010-09-16 18:00:00
        - Fixed compilation on Windows.

0.02    2010-09-16 17:00:00
        - Fixed crash when reading JPEG images with large Exif tags.
        - Improved fixed-point performance for x86.
        - Fixes for various test failures.

0.01    2010-09-08 23:40:00
        - Initial release.