@@ -3,6 +3,7 @@ Handle fixed-point overflow in GM fixed
 Small memory leak in giflib
 BMP RLE support
 BMP OS/2 format support
+Fix BMP flipped images
 Some older versions of giflib don't have DGifGetExtensionNext, require minimum version
 Transparent SBS icons get a transparent background with gd_fixed for some reason
 Remove GM code, the filters are wrong and it's not faster anyway
